<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/conn_scroll"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/edit_connection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/conn_label" >
            </TextView>

            <EditText
                android:id="@+id/conn_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/conn_server" >
            </TextView>

            <EditText
                android:id="@+id/conn_server"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/conn_port" >
            </TextView>

            <EditText
                android:id="@+id/conn_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/conn_username" >
            </TextView>

            <EditText
                android:id="@+id/conn_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/conn_password" >
            </TextView>

            <EditText
                android:id="@+id/conn_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/conn_domain" >
            </TextView>

            <EditText
                android:id="@+id/conn_domain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/conn_resource" >
            </TextView>

            <EditText
                android:id="@+id/conn_resource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" >
            </EditText>
        </LinearLayout>

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/conn_jid" >
            </TextView>

            <EditText
                android:id="@+id/conn_jid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" >
            </EditText>
        </LinearLayout>-->

        <ToggleButton
            android:id="@+id/conn_encrypted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/conn_encrypt_off"
            android:textOn="@string/conn_encrypt_on" >
        </ToggleButton>

        <ToggleButton
            android:id="@+id/conn_sasl_authenticated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/conn_sasl_authenticate_off"
            android:textOn="@string/conn_sasl_authenticate_on" >
        </ToggleButton>

        <ToggleButton
            android:id="@+id/conn_compressed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/conn_compress_off"
            android:textOn="@string/conn_compress_on" >
        </ToggleButton>

        <Button
            android:id="@+id/conn_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conn_test" >
        </Button>

        <Button
            android:id="@+id/conn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conn_save" >
        </Button>
    </LinearLayout>

</ScrollView>